05-k8s-manifests/app/service.yaml
# Generated by 05-k8s-manifests/generate-metallb-config.sh
apiVersion: v1
kind: Service
metadata:
  name: netology-devops-app
  namespace: default
  annotations:
    metallb.io/ip-allocated-from-pool: yc-pool
  # Note: Using CONTROL_PLANE_IP (51.250.5.149) for netology-devops-app LoadBalancer
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: netology-devops-app
  type: LoadBalancer
  # loadBalancerIP: 89.169.141.44
