05-k8s-manifests/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netology-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: netology2.sushkovs.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netology-devops-app
            port:
              number: 80
